tests/samples/negative/control_flow/range_value_named_argument.ax
module range_value_named_argument;

fn main() -> i32 {
    let values = range(end: 3);
    for value in values {
        return value;
    }
    return 0;
}
